--- a/scss/blocks/_section6.scss
+++ b/scss/blocks/_section6.scss
@@ -1,6 +1,9 @@
 .team {
   padding: 100px 0;
   text-align: center;
+  @media screen and (max-width: 992px) {
+    padding: 50px 0;
+  }
   .team__title {
     @include title;
   }
