--- a/scss/blocks/_section7.scss
+++ b/scss/blocks/_section7.scss
@@ -1,5 +1,8 @@
 .work {
   padding: 100px 15px;
+  @media screen and (max-width: 992px) {
+    padding: 50px 15px;
+  }
   .container {
     padding: 0;
     max-width: 1140px;
