--- a/scss/blocks/_section9.scss
+++ b/scss/blocks/_section9.scss
@@ -1,8 +1,14 @@
+// Section 9----------------------------------------------------------
 .plan {
-  background: url("/img/background-section6.png") no-repeat bottom/cover #f4fbfc;
+  background: url("./img/background-section6.png") no-repeat bottom/cover
+    #f4fbfc;
   padding: 100px 0;
   .plan__title {
     @include title;
+    margin-bottom: 80px;
+    @media screen and (max-width: 992px) {
+      margin-bottom: 50px;
+    }
   }
   .plan__items {
     display: flex;
@@ -13,12 +19,12 @@
       justify-content: center;
     }
     .plan__item {
-      background: url(/img/section11-logo1.png) no-repeat top #fff;
+      background: url(./img/section11-logo1.png) no-repeat top #fff;
       background-size: contain;
       max-width: 320px;
       width: 100%;
       height: 580px;
-      border: 1px solid #fff;
+      border: 1px solid #7c7c7c50;
       border-radius: 30px;
       text-align: center;
       align-items: center;
@@ -31,6 +37,11 @@
       }
       &:hover {
         transform: scale(1.2);
+      }
+      @media screen and (max-width: 992px) {
+        &:not(last-child) {
+          margin-bottom: 15px;
+        }
       }
       .plan__content {
         margin-bottom: 60px;
@@ -96,12 +107,18 @@
     }
   }
 }
-
+// Section 10----------------------------------------------------------
 .subskribe {
   padding: 100px 0;
+  @media screen and (max-width: 992px) {
+    padding: 50px;
+  }
   .subskribe__title {
     @include title;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
+    @media screen and (max-width: 992px) {
+      margin-bottom: 30px;
+    }
   }
   .subskribe__content {
     .subskribe__form {
@@ -112,7 +129,8 @@
         border: 1px solid #f5fafa;
         border-radius: 30px;
         background: #f5fafa;
-        margin-bottom: 30px;
+        display: flex;
+        margin: 0 auto 30px;
         text-align: center;
         color: #d0d4d4;
         outline: none;
@@ -131,8 +149,12 @@
     }
   }
 }
+// Footer----------------------------------------------------------
 .footer {
   padding: 100px 0 30px;
+  @media screen and (max-width: 992px) {
+    padding: 50px 0 30px;
+  }
   .footer__items {
     display: flex;
     justify-content: space-between;
