--- a/scss/blocks/_section9.scss
+++ b/scss/blocks/_section9.scss
@@ -1,247 +1,91 @@
-// Section 9----------------------------------------------------------
-.plan {
-  background: url("/img/background-section6.png") no-repeat bottom/cover #f4fbfc;
-  padding: 100px 0;
-  .plan__title {
+.filter {
+  padding: 50px 0;
+  .filter__title {
     @include title;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     @media screen and (max-width: 992px) {
-      margin-bottom: 50px;
+      margin-bottom: 20px;
     }
   }
-  .plan__items {
-    display: flex;
-    justify-content: space-between;
-    @media screen and (max-width: 992px) {
+  .filter__wrapper {
+    margin: 0;
+    .tabs__btns {
+      display: flex;
       flex-wrap: wrap;
-      margin: 20px auto;
       justify-content: center;
-    }
-    .plan__item {
-      background: url(/img/section11-logo1.png) no-repeat top #fff;
-      background-size: contain;
-      max-width: 320px;
-      width: 100%;
-      height: 580px;
-      border: 1px solid #7c7c7c50;
-      border-radius: 30px;
-      text-align: center;
       align-items: center;
-      justify-content: center;
-      padding: 45px 0;
-      line-height: 1;
-      transition: 0.5s;
-      &:not(:last-child) {
-        margin-right: 15px;
-      }
-      &:hover {
-        transform: scale(1.2);
-      }
-      @media screen and (max-width: 992px) {
-        &:not(last-child) {
-          margin-bottom: 15px;
-        }
-      }
-      .plan__content {
-        margin-bottom: 60px;
-      }
-      h5 {
-        font-size: 16px;
-        color: #494949;
-        font-size: 700;
-        margin-top: 50px;
-        line-height: 1;
-      }
-      p {
-        font-size: 14px;
-        color: #7c7c7c;
-      }
-      .plan__prices {
-        display: flex;
-        max-height: 72px;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-        color: #53daf4;
-        font-size: 20px;
-        margin-bottom: 20px;
-        .plan__znak {
-          p {
-            @include back;
-            font-size: 20px;
-            padding-bottom: 10px;
-            font-weight: 600;
-          }
-        }
-        .plan__price {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          .plan__number {
-            font-size: 72px;
-            margin-right: 5px;
-            margin-left: 5px;
-            color: #e88283;
-            font-family: "Raleway";
-            font-weight: 800;
-            text-align: center;
-            @include back;
-          }
-          .plan__date {
-            font-size: 20px;
-            @include back;
-            padding-top: 50px;
-          }
-        }
-      }
-      .plan__inseptTxt {
-        color: #c7c7c7;
-      }
-      .plan__btn {
-        @include btns;
-        max-width: 150px;
-        width: 100%;
-        height: 48px;
-      }
-    }
-  }
-}
-// Section 10----------------------------------------------------------
-.subskribe {
-  padding: 100px 0;
-  @media screen and (max-width: 992px) {
-    padding: 50px;
-  }
-  .subskribe__title {
-    @include title;
-    margin-bottom: 80px;
-    @media screen and (max-width: 992px) {
+      border-top: 1px solid #e1e1e1;
+      border-bottom: 1px solid #e1e1e1;
+      padding: 25px;
       margin-bottom: 30px;
-    }
-  }
-  .subskribe__content {
-    .subskribe__form {
-      input {
-        max-width: 370px;
-        width: 100%;
-        height: 75px;
-        border: 1px solid #f5fafa;
-        border-radius: 30px;
-        background: #f5fafa;
-        display: flex;
-        margin: 0 auto 30px;
-        text-align: center;
-        color: #d0d4d4;
-        outline: none;
+      .tabs__btn {
+        color: #777777;
+        margin-right: 45px;
+        font-size: 14px;
+        text-transform: uppercase;
+        font-weight: 700;
+        letter-spacing: 1px;
+        cursor: pointer;
         transition: 0.5s;
+        position: relative;
+        user-select: none;
+        &:hover {
+          color: #333333;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
         &:focus {
-          background: #fff;
-          box-shadow: 0 0 20px rgba($color: #bfe0e0, $alpha: 1);
-          color: #7c7c7c;
-          font-size: 14px;
-          font-weight: 700;
+          outline: none;
+        }
+        @media screen and (max-width: 992px) {
+          margin-right: 30px;
         }
       }
-      .subskribe__btn {
-        @include btns;
-      }
     }
-  }
-}
-// Footer----------------------------------------------------------
-.footer {
-  padding: 100px 0 30px;
-  @media screen and (max-width: 992px) {
-    padding: 50px 0 30px;
-  }
-  .footer__items {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    margin-bottom: 125px;
-    &::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      left: 0;
-      top: -50px;
-      width: 100%;
-      height: 1px;
-      background: #5555552a;
-    }
-    .footer__title {
-      .footer__text {
-        @include footer-subtitle;
-        max-width: 205px;
-        width: 100%;
-        margin: 20px 0;
-      }
-      .footer__icons {
-        display: flex;
-        .footer__icon {
-          transition: all 0.8s;
-          @include icon;
-          &:hover {
-            transform: rotate(360deg);
+    .tabs__cards {
+      columns: 3;
+      max-height: 1900px;
+      height: 100%;
+      width: auto;
+      margin-bottom: 40px;
+      .tabs__card {
+        margin-bottom: 20px;
+        page-break-inside: avoid;
+        break-inside: avoid;
+        display: none;
+        animation: appear 1s forwards;
+        @keyframes appear {
+          0% {
+            opacity: 0;
+          }
+          100% {
+            opacity: 1;
           }
         }
-        .footer__icon_facebook {
-          background: #3b579d;
+        &.active {
+          display: block;
         }
-        .footer__icon_google {
-          background: #da4835;
+        &.vis {
+          display: none;
         }
-        .footer__icon_twitter {
-          background: #55acee;
+        img {
+          width: 100%;
         }
       }
     }
-    .footer__item {
-      h6 {
-        @include footer-title;
-        margin-bottom: 45px;
+    .filter__more_files {
+      display: flex;
+      margin: 0 auto;
+      input[type="file"] {
+        display: none;
       }
-      a {
-        @include footer-subtitle;
-      }
-    }
-  }
-  @media screen and (max-width: 768px) {
-    .footer__items {
-      flex-wrap: wrap;
-      margin: 50px auto;
-      .footer__item {
-        margin: 0 auto;
-        margin-bottom: 20px;
-      }
-    }
-  }
-  .footer__copyright {
-    display: flex;
-    position: relative;
-    &::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      left: 5px;
-      top: -35px;
-      width: 100%;
-      height: 1px;
-      background: #5555552a;
-    }
-    p {
-      @include footer-subtitle;
-      margin-right: 35px;
-      position: relative;
-      &:not(:first-child)::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        left: -16px;
-        top: 6px;
-        width: 1px;
-        height: 18px;
-        background: #555555bb;
+      .filter__more {
+        @include btns;
+        cursor: pointer;
+        width: 125px;
+        height: auto;
+        padding: 10px 30px;
       }
     }
   }
