--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,4 +11,6 @@
 @import "blocks/section7";
 @import "blocks/section8";
 @import "blocks/section9";
-@import "blocks/filter";
+@import "blocks/section10";
+@import "blocks/section11";
+@import "blocks/footer";
